--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -307,5 +307,6 @@
   "zenMode.hideLineNumbers": false,
   "zenMode.hideStatusBar": false,
   "zenMode.restore": false,
-  "editor.lineHeight": 2
+  "editor.lineHeight": 2,
+  "indentRainbow.colorOnWhiteSpaceOnly": true
 }
